--- a/styles.css
+++ b/styles.css
@@ -1850,8 +1850,9 @@ body {
 
     .camden-lightbox-content {
       position: absolute;
-      top: 50%;
-      left: 50%;
+      top: 40%;
+      left: 40%;
+
       transform: translate(-50%, -50%);
       max-width: 80vh;
       max-height: 80vw;
@@ -1859,16 +1860,16 @@ body {
       background-color: #fff;
     }
 
-    .camden-lightbox-image {
+.camden-lightbox-image {
       max-width: 100%;
       max-height: 100%;
     }
 
-    .camden-lightbox-text {
-      padding: 20px;
+.camden-lightbox-text {
+      padding: 5vw;
     }
 
-    .camden-lightbox-close {
+.camden-lightbox-close {
       position: absolute;
       top: 10px;
       right: 10px;
@@ -1884,7 +1885,7 @@ body {
       z-index: 1001; /* Ensure it's above the map and lightboxes */
     }
 
-    .webp-image {
+.webp-image {
       position: absolute;
       top: 0;
       left: 0;
@@ -1894,8 +1895,7 @@ body {
     }
 
 .camden-gif{
-  width: 10%;
-  
+  width: 10%; 
 }
 
 /* Responsive Layout for Smaller Screens */
