--- a/styles.css
+++ b/styles.css
@@ -1850,12 +1850,11 @@ body {
 
     .camden-lightbox-content {
       position: absolute;
-      top: 40%;
+      top: 35%;
       left: 40%;
-
       transform: translate(-50%, -50%);
-      max-width: 80vh;
-      max-height: 80vw;
+      max-width: 80%;
+      max-height: 80%;
       transform: rotate(-90deg);
       background-color: #fff;
     }
@@ -1866,7 +1865,7 @@ body {
     }
 
 .camden-lightbox-text {
-      padding: 5vw;
+      padding: 10%;
     }
 
 .camden-lightbox-close {
