--- a/camden-canalwalk/style.css
+++ b/camden-canalwalk/style.css
@@ -1,9 +1,30 @@
-body, html {
+@font-face {
+    font-family: "Eina Regular";
+    src: url("/fonts/eina-01-regular.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+@font-face {
+    font-family: "Eina Semi Bold";
+    src: url("/fonts/eina-01-semibold.ttf") format("truetype");
+    font-weight: 600;
+    font-style: normal;
+}
+
+/* Remove the outline for all elements when clicked with a mouse */
+* {
+    outline: none;
+}
+
+  body, html {
   margin: 0;
   padding: 0;
   height: 100%;
-  font-family: sans-serif;
+  font-family: "Eina Regular", Arial, sans-serif;
   overflow-y: auto; /* Add vertical scroll to the body */
+    
 }.slider-container {
   width: 100%;
   height: 100%;
