--- a/camden-canalwalk/style.css
+++ b/camden-canalwalk/style.css
@@ -176,5 +176,36 @@ font-size: 1.5em;
     margin-bottom: 20px; /* Add spacing between boxes */
 }
 }
+
+.header-image {
+    width: 40%;
+    max-width: 600px;
+    display: block;
+    margin: 20px auto;
 }
+
+.header-subtitle {
+    font-size: 1.5rem;
+    text-align: center;
+    color: #333;
+    margin-bottom: 20px;
+}
+
+.intro-video {
+    width: 80%;
+    display: block;
+    margin: 0 auto;
+    max-width: 1200px;
+    margin-top: 5%;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.intro-video video {
+
+    max-width: 800px;
+    border-radius: 10px;
+}
+
+
  
