--- a/camden-canalwalk/style.css
+++ b/camden-canalwalk/style.css
@@ -179,33 +179,48 @@ body {
     align-items: center;
     padding: 4vw 2vw;
     box-sizing: border-box;
+
+     /* Add border styling */
+    border: 4px solid #000; /* Black border for strong visibility */
+    border-radius: 15px; /* Rounded edges for a polished look */
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3); /* Soft shadow for depth */
+    background-color: #fff; /* Ensure background is white to stand out */
+    max-width: 75%; /* Limit width for a clean frame */
+    margin: auto; /* Center within the slide */
+    padding: 3vw; /* Adjust padding inside the slide */
 }
 
 .slide-title {
     font-size: 3.5em;
     margin-bottom: -3vw;
+    text-align: center;
 }
 
 .slide-subtitle {
     font-size: 2em;
+    margin-top: 2vw;
     margin-bottom: 1vw;
+    text-align: center;
 }
 
 .slide-image {
     max-width: 50%;
     height: auto;
     margin-bottom: 2vw;
+    text-align: center;
 }
 
 .mini-title {
     font-family: "Eina Semi Bold", Arial, sans-serif;
     font-weight:800;
     margin-bottom: -1vw;
+    text-align: center;
 }
 
 .mini-subtitle {
     font-size: 1em;
     margin-bottom: 20px;
+    text-align: center;
 }
 .info-boxes {
     justify-content: center; /* Horizontally center the boxes */
@@ -263,34 +278,45 @@ body {
     margin-bottom: 2vw;
 }
     .slide-title {
-    font-size: 4em;
-    margin-bottom: -7vw;
-}
+    font-size: 6.5vw;}
 
 .slide-subtitle {
-    font-size: 3em;
-    margin-bottom: 1vw;
+    font-size: 4.5vw;
 }
 
     .mini-title {
     font-family: "Eina Semi Bold", Arial, sans-serif;
     font-weight:800;
     margin-bottom: -1vw;
-        font-size: 2em;
+        text-align: center;
 }
 
 .mini-subtitle {
-    font-size: 1.8em;
     margin-top: -0.5vw;
+            text-align: center;
 }
 .info-boxes {
     justify-content: center; /* Horizontally center the boxes */
     align-items: center; /* Optional: Vertically center (if required) */
-font-size: 1.5em;
+font-size: 1em;
     text-align: left;
     width: 60%; /* Default for larger screens */
     margin-bottom: 20px; /* Add spacing between boxes */
+    
 }
+        p.header-subtitle {
+    font-size: 4.5vw;
+        
+    }
+    p.mini-subtitle {
+    font-size: 4.5vw;
+        
+    }
+
+    h3.mini-title {
+    font-size: 4.5vw;
+        
+    }
 }
 
 .header-image {
@@ -323,5 +349,17 @@ font-size: 1.5em;
     border-radius: 10px;
 }
 
+.arrow {
+        font-size: 1.5rem;
+        padding: 50px 15px;
+    }
 
- 
+    .prev {
+        left: 2%;
+        top: 20%;
+    }
+
+    .next {
+        right: 2%;
+        top: 20%;
+    }
