--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ body {
   position: relative;
   width: 100%; /* Full width of the page */
   height: 20%; /* Set height of the row */
-  background-color: #ffe4d1; /* White background */
+  background-color: #fef8d3; /* White background */
   display: flex;
   justify-content: center; /* Center horizontally */
   align-items: center; /* Center vertically */
