--- a/styles.css
+++ b/styles.css
@@ -2105,6 +2105,7 @@ header {
 
 .civil-title-image {
     width: 100%;
+    max-width: 800px;
     max-height: 200px;
     object-fit: cover;
 }
@@ -2179,8 +2180,9 @@ header {
 }
 
 .civil-drawing-thumbnail {
-    width: 100%;
+    width: 80%;
     height: auto;
+    margin-left:10%;
     cursor: pointer;
     transition: transform 0.3s ease;
 }
@@ -2228,7 +2230,7 @@ header {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 1);
     display: flex;
     justify-content: center;
     align-items: center;
