--- a/styles.css
+++ b/styles.css
@@ -142,6 +142,18 @@ body {
   flex-direction: column; /* Stack rows vertically */
 }
 
+.m-one-row
+{
+  position: relative;
+  width: 100%; /* Full width of the page */
+  height: 20%; /* Set height of the row */
+  background-color: #ffffff; /* White background */
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+}
+
+
 /* Zero row styling */
 .zero-row {
   position: relative;
