--- a/styles.css
+++ b/styles.css
@@ -158,7 +158,7 @@ body {
   position: relative;
   width: 100%; /* Full width of the page */
   height: 20%; /* Set height of the row */
-  background-color: #dfd8c6; /* White background */
+  background-color: #fef5df; /* White background */
   display: flex;
   justify-content: center; /* Center horizontally */
   align-items: center; /* Center vertically */
